# Tracking_Variable

./: CMakeLists.txt  README.md  read.html
Resources/: Graph.dot  Log.html  Log1.html  Log2.html  LogTest.html
Source/: TrackingValue.cpp  TrackingValue.h  main.cpp
Source/Algorithm/: Algorithm.h
Source/WorkFile/: DotController.cpp  DotController.h  FunctionPrinter.cpp  FunctionPrinter.h  LogController.cpp  LogController.h
